# DidacticalEnigma.Next/Models/WordType.cs
@@ -1,0 +1,10 @@
+namespace DidacticalEnigma.Next.Models;
+
+public enum WordType
+{
+    Other,
+    Noun,
+    Verb,
+    Particle,
+    Pronoun,
+}
